@@ -4,6 +4,8 @@ import com.autoyol.commons.web.ErrorCode;
 import net.sf.json.JSONObject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import sun.misc.BASE64Encoder;
+
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
@@ -137,7 +139,7 @@ public class SMSIcsocVoiceUtils {
     private static int getIcsocLines(){
         Map<String,Object> map = new HashMap<String,Object>();
         String account=ICSOC_ACCOUNT;
-        String password=SHA1("icsoc"+Base64.getEncoder().encode(ICSOC_PASSWORD.getBytes()));
+        String password=SHA1("icsoc"+new BASE64Encoder().encode(ICSOC_PASSWORD.getBytes()));
         String url=ICSOC_URL+ "/voiceserver.php";
         map.put("Account", account);
         map.put("password", password);
@@ -208,7 +210,6 @@ public class SMSIcsocVoiceUtils {
 
         return buffer.toString();
     }
-
 
     public static String SHA1(String decript) {
         try {
